# googly

./: .gitignore  .justfile  Analysis.md  Dockerfile  LICENSE.txt  README.md  justfile  pyproject.toml  supervisord.conf
config/: eye_model_config.json  face_model_config.json  local.env
scripts/: entrypoint.sh  serve.sh
src/: runner.py  runner3.py
src/app/: main.py
src/app/api/v1/endpoints/: health.py  image.py
src/app/core/: app.py  deploy.py  enums.py  logger.py  router.py  settings.py
src/app/deployment/: fastapi.py  ray.py
src/app/models/: base_models.py  detection_models.py  endpoint.py  features.py  googly.py  image.py  model_registery.py  vino_models.py
src/app/utils/: eye_utils.py  file_utils.py  googlify_utils.py  image_utils.py  model_utils.py  overlay_utils.py  vis_utils.py
src/tests/utils/: eye_test.py
