[project]
name = "googly"
version = "0.1.0"
description = "Googly Eyes photo modification web app."
authors = [{ name = "OPX", email = "shaban@opx.slmail.me" }]
license = { text = "MIT" }
readme = "README.md"


### DEPENDENCIES ###
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.108.0",
  "ray[serve]>=2.9.3",
  "opencv-python>=4.9.0.80",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "pillow>=10.2.0",
  "python-multipart>=0.0.9",
  "loguru>=0.7.2",
  "scikit-learn>=1.4.1.post1",
  "aiohttp>=3.9.3",
  "httpx>=0.27.0",
  "openvino>=2024.0.0",
  "uvicorn>=0.29.0",
]

### DEV DEPENDENCIES ###
[tool.pdm.dev-dependencies]
lint = ["black>=24.3.0", "flake8>=7.0.0"]
test = [
  "pytest>=8.1.1",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "httpx>=0.27.0",
]
jupyter = []
playground = []

### BUILD CONFIG ###
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
